--- a/index.html
+++ b/index.html
@@ -49,7 +49,22 @@
     </section>
 
     <section class="section-about">
-      
+        <div class="about-us">
+            <div class="about-text-box">
+                <h4 class="sub-title">Our Story</h4>
+                <h1 class="heading-primary black">Building trust through financial excellence</h1>
+            </div>
+
+            <div class="about-content">
+                <p class="about-description">We understand that trust is the cornerstone of any successful client relationship. Our commitment to building trust is unwavering, and it is deeply rooted in the foundation of financial excellence. We believe that by consistently delivering exceptional financial services, we not only meet but exceed the expectations of our clients.</p>
+                <div class="about-us-pictures">
+                  <img src="img/man-at-desk.jpg" class = "about-us-images" alt="">
+                  <img src="img/man-at-desk.jpg" class = "about-us-images" alt="">
+                  <img src="img/man-at-desk.jpg" class = "about-us-images" alt="">
+                </div>
+                
+            </div>
+        </div>
     </section>
 
   </main>
