--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
         </div>
     </section>
 
+    <section class="section-company-values">
+      <div class="company-values">
+        <div class="values">
+
+        </div>
+        <div class="values-content">
+
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <body>
