made some other changes

--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
             </div>
             <div class="service-boxes">
               <img src="img/Balance-150x150.png" alt="">
-              <h4>Financial Analysis</h4>
-              <p class="services-description">Our in-depth analysis provides valuable insights to inform strategic decision-making and optimize your financial performance.</p>
+              <h4>Tax Planning</h4>
+              <p class="services-description">Our tax planning services are designed to minimize liabilities, ensure compliance, and identify opportunities for tax-saving strategies.</p>
               <a class="services-btn" href="/pages/products.html"
               >Learn More</a>
             </div>
             <div class="service-boxes">
               <img src="img/Abacus-150x150.png" alt="">
-              <h4>Financial Analysis</h4>
-              <p class="services-description">Our in-depth analysis provides valuable insights to inform strategic decision-making and optimize your financial performance.</p>
+              <h4>Budget Analysis</h4>
+              <p class="services-description">Our analysts work collaboratively with your team to create comprehensive budgets and contribute to overall fiscal health..</p>
               <a class="services-btn" href="/pages/products.html"
               >Learn More</a>
             </div>
@@ -173,22 +173,22 @@
 
             <div class="service-boxes">
               <img src="img/Cheklist.png" alt="">
-              <h4>Financial Analysis</h4>
-              <p class="services-description">Our in-depth analysis provides valuable insights to inform strategic decision-making and optimize your financial performance.</p>
+              <h4>BookKeeping</h4>
+              <p class="services-description">From organizing transactions to maintaining accurate records, we ensure your financial data is organized and accessible.</p>
               <a class="services-btn" href="/pages/products.html"
               >Learn More</a>
             </div>
             <div class="service-boxes">
               <img src="img/Saving-150x150.png" alt="">
-              <h4>Financial Analysis</h4>
-              <p class="services-description">Our in-depth analysis provides valuable insights to inform strategic decision-making and optimize your financial performance.</p>
+              <h4>Virtual Consulting</h4>
+              <p class="services-description">Regardless of your location, our secure and advanced communication platforms facilitate effective collaboration, ensuring you receive top-notch financial guidance.</p>
               <a class="services-btn" href="/pages/products.html"
               >Learn More</a>
             </div>
             <div class="service-boxes">
               <img src="img/Idea-150x150.png" alt="">
-              <h4>Financial Analysis</h4>
-              <p class="services-description">Our in-depth analysis provides valuable insights to inform strategic decision-making and optimize your financial performance.</p>
+              <h4>Financial Advisory</h4>
+              <p class="services-description">Our financial planners work closely with you to create personalized strategies that align with your retirement goals and aspirations.</p>
               <a class="services-btn" href="/pages/products.html"
               >Learn More</a>
             </div>
