made changes to files

--- a/index.html
+++ b/index.html
@@ -198,6 +198,50 @@
         </div>
       </div>
 
+      <div class="testimonials-section">
+        <div class="testimonials">
+          <h4 class="sub-title">Testimonials</h4>
+          <h1 class="heading-primary black">
+            What they say about us
+          </h1>
+          <div class="testimonials-content">
+            <div class="content">
+              <div class="testimonial-text">
+                <p>"Gravida vulputate aliquet tempor sitequ esed pretium urna aenean haret placer eharetra adipiscing penati ali vulputate aliquet penatibus aliquam."</p>
+
+              </div>
+              <div class="image-box">
+                <img src="img/headshot-1.jpg" alt="">
+                <h4>Michael Liam</h4>
+                <p>HR Manager</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="testimonial-text">
+                <p>"Gravida vulputate aliquet tempor sitequ esed pretium urna aenean haret placer eharetra adipiscing penati ali vulputate aliquet penatibus aliquam."</p>
+
+              </div>
+              <div class="image-box">
+                <img src="img/headshot-1.jpg" alt="">
+                <h4>Michael Liam</h4>
+                <p>HR Manager</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="testimonial-text">
+                <p>"Gravida vulputate aliquet tempor sitequ esed pretium urna aenean haret placer eharetra adipiscing penati ali vulputate aliquet penatibus aliquam."</p>
+
+              </div>
+              <div class="image-box">
+                <img src="img/headshot-1.jpg" alt="">
+                <h4>Michael Liam</h4>
+                <p>HR Manager</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
   </main>
 
