feat: created contact page

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <title>Burchell Davis' Financial Accounting Services</title>
   </head>
 
+<body>
+
   <header class="header">
-    <a href="#">
-      <img src="img/logos/omnifood-logo.png" alt="Logo" class="logo" />
+    <a href="/">
+      <img src="/img/checkbox.png" alt="Logo" class="logo" />
     </a>
 
-    <nav class="main-nav">
+   <nav class="main-nav">
       <ul class="main-nav-list">
         <li><a class="main-nav-link" href="/">Home</a></li>
         <li><a class="main-nav-link" href="/pages/about.html">About Us</a></li>
@@ -28,6 +30,7 @@
           <a class="main-nav-link" href="/pages/products.html">Products</a>
         </li>
         <li><a class="main-nav-link" href="/pages/news.html">News</a></li>
+        <li><a class="main-nav-link" href="/pages/faqs.html">Faqs</a></li>
         <li>
           <a class="main-nav-link" href="/pages/contact.html">Contact Us</a>
         </li>
@@ -40,11 +43,11 @@
     </nav>
   </header>
 
-  <main>
+    <main>
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
-          <h4 class="sub-title">Welcome to Burchell Tax Services</h4>
+          <h4 class="sub-title">Welcome to Burchell Accounting Services</h4>
           <h1 class="heading-primary white">
             Optimizing your finances in better way
           </h1>
@@ -300,12 +303,33 @@
         </div>
       </div>
 
-
-
-
+      <div class="cta-section">
+        <div class="cta-content">
+          <div class="cta-text-content">
+            <h1>Don't hesitate to contact us any time you need</h1>
+          <p>Whether it’s a quick inquiry or a detailed discussion, we’re here to provide the support and information you need. Your success is our priority, and we’re just a message or call away. Contact us with confidence—your queries are welcomed anytime.</p>
+           <a class="services-btn" href="/pages/products.html"
+              >Learn More</a>
+          </div>
+          
+        </div>
+      </div>
   </main>
+  
+    <footer>
+    <div class="footer">
+      <div class="footer-container">
+        <div class="logo-section">
+          <h1>Burchells Accounting</h1>
+          <p>Address Goes Here</p>
+          <p>876-333-3333</p>
+          <div class="social-links">
 
-  <body>
-    <script src="scripts/"></script>
-  </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="scripts/"></script>
+</body>
 </html>
