made change to index page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <header class="header">
     <a href="/">
-      <img src="/img/checkbox.png" alt="Logo" class="logo" />
+      <img src="" alt="Logo" class="logo" />
     </a>
 
    <nav class="main-nav">
