feat: added hero on each page

--- a/pages/news.html
+++ b/pages/news.html
@@ -41,7 +41,15 @@
     </nav>
   </header>
   <body>
-  <main></main>  
+  <main>
+    <div class="contact-hero">
+				<div class="contact-container">
+					<div class="contact-hero-content">
+						<h1>News</h1>
+					</div>
+				</div>
+			</div>
+  </main>  
   </body>
   <footer></footer>
   </html>
