--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer" />
     <title>Burchell Davis' Financial Accounting Services</title>
   </head>
 
@@ -51,5 +57,76 @@
 			</div>
   </main>  
   </body>
-  <footer></footer>
+	<footer>
+			<div class="footer">
+				<div class="footer-container">
+					<div class="logo-section">
+						<div class="logo-section-title">
+							<h1>Burchells Accounting</h1>
+							<p>Address Goes Here</p>
+							<p>876-333-3333</p>
+						</div>
+
+						<div class="social-links">
+							<i class="fa-brands fa-facebook"></i>
+							<i class="fa-brands fa-twitter"></i>
+							<i class="fa-brands fa-linkedin"></i>
+							<i class="fa-brands fa-instagram"></i>
+						</div>
+					</div>
+					<div class="footer-links-section">
+						<div class="footer-links">
+							<div class="footer-links-title">
+								<h3>Company</h3>
+							</div>
+							<ul>
+								<li class="footer-link"><a href="/pages/about.html">About Us</a></li>
+								<li class="footer-link"><a href="/pages/products.html">Products</a></li>
+								<li class="footer-link"><a href="/pages/about.html">Our Team</a></li>
+								<li class="footer-link"><a href="/index.html">Testimonials</a></li>
+								<li class="footer-link"><a href="/pages/faqs.html">FAQs</a></li>
+								<li class="footer-link"><a href="/pages/news.html">News</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="footer-links-section">
+						<div class="footer-links">
+							<div class="footer-links-title">
+								<h3>Services</h3>
+							</div>
+							<ul>
+								<li class="footer-link">Financial Analysis</li>
+								<li class="footer-link">Tax Planning</li>
+								<li class="footer-link">Budget Analysis</li>
+								<li class="footer-link">Bookkeeping</li>
+								<li class="footer-link">Virtual Consulting</li>
+								<li class="footer-link">Financial Advisory</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="footer-links-section">
+						<div class="footer-links">
+							<div class="footer-links-title">
+								<h3>Support</h3>
+							</div>
+
+							<ul>
+								<li class="footer-link">Help Center</li>
+								<li class="footer-link">Privacy Policy</li>
+								<li class="footer-link">Terms and Conditions</li>
+								<li class="footer-link">Contact Us</li>
+								<li class="footer-link">FAQs</li>
+								<li class="footer-link">News</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="copyright">
+
+				<p>Copyright &copy; Burchell Accounting Services 2023</p>
+			</div>
+		</footer>
   </html>
