--- a/pages/news.html
+++ b/pages/news.html
@@ -18,6 +18,8 @@
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Burchell Davis' Financial Accounting Services</title>
   </head>
 
@@ -45,6 +47,10 @@
         </li>
       </ul>
     </nav>
+    <button class="btn-mobile-nav">
+        <ion-icon class = "icon-mobile-nav" name="menu-outline" id="menu-mobile"></ion-icon>
+        <ion-icon  class = "icon-mobile-nav" name="close-outline" id = "menu-close"></ion-icon>
+    </button>
   </header>
   <body>
   <main>
