made changes to about us page

--- a/index.html
+++ b/index.html
@@ -354,17 +354,19 @@
 				</div>
 			</div>
 
-			<div class="cta-section">
-				<div class="cta-content">
-					<div class="cta-text-content">
-						<h1>Don't hesitate to contact us any time you need</h1>
+
+
+			 <div class="contact-hero pd-6">
+				<div class="contact-container">
+					<div class="contact-hero-content">
+						<h1 class="heading-primary">Don't hesitate to contact us any time you need</h1>
 						<p>
 							Whether it’s a quick inquiry or a detailed discussion, we’re here
 							to provide the support and information you need. Your success is
 							our priority, and we’re just a message or call away. Contact us
 							with confidence—your queries are welcomed anytime.
 						</p>
-						<a class="services-btn" href="/pages/products.html">Learn More</a>
+						<a class="services-btn" href="/pages/contact.html">Contact Us</a>
 					</div>
 				</div>
 			</div>
@@ -449,12 +451,8 @@
 				<p>Copyright &copy; Burchell Accounting Services 2023</p>
 			</div>
 		</footer>
-		<script>
-			const btn = document.querySelector(".btn-mobile-nav")
-			const header = document.querySelector(".header")
-			btn.addEventListener("click", () => {
-				header.classList.toggle("nav-open")
-			})
+		<script src="scripts/main.js">
+			
 		</script>
 	</body>
 </html>
