--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,40 +17,58 @@
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+			<script
+			type="module"
+			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 		<title>Burchell Davis' Financial Accounting Services</title>
 	</head>
 
 	<header class="header">
-		<a href="#">
-			<img src="img/logos/omnifood-logo.png" alt="Logo" class="logo" />
-		</a>
+			<a href="/">
+				<img src="" alt="Logo" class="logo" />
+			</a>
 
-		<nav class="main-nav">
-			<ul class="main-nav-list">
-				<li><a class="main-nav-link" href="/">Home</a></li>
-				<li><a class="main-nav-link" href="/pages/about.html">About Us</a></li>
-				<li>
-					<a class="main-nav-link" href="/pages/products.html">Products</a>
-				</li>
-				<li><a class="main-nav-link" href="/pages/news.html">News</a></li>
-				<li><a class="main-nav-link" href="/pages/faqs.html">Faqs</a></li>
-				<li>
-					<a class="main-nav-link" href="/pages/contact.html">Contact Us</a>
-				</li>
-				<li>
-					<a class="main-nav-link nav-cta" href="/pages/products.html">
-						Get Started
-					</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
+			<nav class="main-nav">
+				<ul class="main-nav-list">
+					<li><a class="main-nav-link" href="/">Home</a></li>
+					<li>
+						<a class="main-nav-link" href="/pages/about.html">About Us</a>
+					</li>
+					<li>
+						<a class="main-nav-link" href="/pages/products.html">Products</a>
+					</li>
+					<li><a class="main-nav-link" href="/pages/news.html">News</a></li>
+					<li><a class="main-nav-link" href="/pages/faqs.html">Faqs</a></li>
+					<li>
+						<a class="main-nav-link" href="/pages/contact.html">Contact Us</a>
+					</li>
+					<li>
+						<a class="main-nav-link nav-cta" href="/pages/products.html">
+							Get Started
+						</a>
+					</li>
+				</ul>
+			</nav>
+			<button class="btn-mobile-nav">
+				<ion-icon
+					class="icon-mobile-nav"
+					name="menu-outline"
+					id="menu-mobile"></ion-icon>
+				<ion-icon
+					class="icon-mobile-nav"
+					name="close-outline"
+					id="menu-close"></ion-icon>
+			</button>
+		</header>
 	<body>
 		<main>
 			<div class="contact-hero">
 				<div class="contact-container">
 					<div class="contact-hero-content">
-						<h1>Contact Us</h1>
+						<h1 class="heading-primary">Contact Us</h1>
 					</div>
 				</div>
 			</div>
@@ -231,4 +249,7 @@
 				<p>Copyright &copy; Burchell Accounting Services 2023</p>
 			</div>
 		</footer>
+		<script src="scripts/main.js">
+			
+		</script>
 </html>
