made changes to about us page

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 							of our clients.
 						</p>
 						<div class="about-us-pictures">
-							<img src="img/man-at-desk.jpg" class="about-us-images" alt="" />
-							<img src="img/man-at-desk.jpg" class="about-us-images" alt="" />
-							<img src="img/man-at-desk.jpg" class="about-us-images" alt="" />
+							<img src="img/accounting-ledger.jpeg" class="about-us-images" alt="Accounting Books" />
+							<img src="img/calculator.jpeg" class="about-us-images" alt="Calculator" />
+							<img src="img/money-calculator.jpeg" class="about-us-images" alt="Money and Calculator" />
 						</div>
 					</div>
 				</div>
@@ -353,8 +353,6 @@
 					</div>
 				</div>
 			</div>
-
-
 
 			 <div class="contact-hero pd-6">
 				<div class="contact-container">
