--- a/pages/about.html
+++ b/pages/about.html
@@ -114,7 +114,7 @@
 										aliquet penatibus aliquam."
 									</p>
 								</div>
-								<div class="image-box">
+								<div class="team-image-box">
 									<img src="/img/headshot-1.jpg" alt="" />
 									<div class="image-title">
 										<h4>Michael Liam</h4>
@@ -131,7 +131,7 @@
 										aliquet penatibus aliquam."
 									</p>
 								</div>
-								<div class="image-box">
+								<div class="team-image-box">
 									<img src="/img/headshot-2.jpg" alt="" />
 									<div class="image-title">
 										<h4>Michael Liam</h4>
@@ -151,7 +151,7 @@
 										aliquet penatibus aliquam."
 									</p>
 								</div>
-								<div class="image-box">
+								<div class="team-image-box">
 									<img src="/img/headshot-1.jpg" alt="" />
 									<div class="image-title">
 										<h4>Michael Liam</h4>
@@ -168,7 +168,7 @@
 										aliquet penatibus aliquam."
 									</p>
 								</div>
-								<div class="image-box">
+								<div class="team-image-box">
 									<img src="/img/headshot-2.jpg" alt="" />
 									<div class="image-title">
 										<h4>Michael Liam</h4>
