compleleted us and products page

--- a/pages/about.html
+++ b/pages/about.html
@@ -109,6 +109,54 @@
 				</div>
 			</section>
 
+			<div class="values">
+				<div class="values-text-box">
+					<h4 class="sub-title">Company Values</h4>
+					<h1 class="heading-primary black">
+						Delivering precision and reliability in our services
+					</h1>
+					<p class="values-description">
+						We believe that true leadership extends beyond expertise and
+						authority—it involves guiding with a clear vision, understanding the
+						needs of others with genuine empathy, and treating every individual
+						with unwavering respect.
+					</p>
+				</div>
+
+				<div class="values-list">
+					<div class="values-list-item">
+						<img src="/img/checkbox.png" alt="Check Box" />
+						<div class="values-list-content">
+							<h2>Client-centric excellence</h2>
+							<p>
+								We are committed to conducting our business with the highest
+								levels of integrity.
+							</p>
+						</div>
+					</div>
+					<div class="values-list-item">
+						<img src="/img/checkbox.png" alt="Check Box" />
+						<div class="values-list-content">
+							<h2>Innovation In Action</h2>
+							<p>
+								We actively seek out opportunities for improvement and embrace
+								change as a catalyst for growth.
+							</p>
+						</div>
+					</div>
+					<div class="values-list-item">
+						<img src="/img/checkbox.png" alt="Check Box" />
+						<div class="values-list-content">
+							<h2>Transparency matters</h2>
+							<p>
+								We value open communication, sharing information openly and
+								honestly.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="teams-section">
 				<div class="teams" id="teams">
 					<h4 class="sub-title">Our Team</h4>
