--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -1,153 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet" />
+		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
-      <script
+		<script
 			type="module"
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 		<script
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <title>Burchell Davis' Financial Accounting Services</title>
-  </head>
+		<title>Burchell Davis' Financial Accounting Services</title>
+	</head>
 
- <header class="header">
-			<a href="/">
-				<img src="" alt="Logo" class="logo" />
-			</a>
+	<header class="header">
+		<a href="/">
+			<img src="" alt="Logo" class="logo" />
+		</a>
 
-			<nav class="main-nav">
-				<ul class="main-nav-list">
-					<li><a class="main-nav-link" href="/">Home</a></li>
-					<li>
-						<a class="main-nav-link" href="/pages/about.html">About Us</a>
-					</li>
-					<li>
-						<a class="main-nav-link" href="/pages/products.html">Products</a>
-					</li>
-					<li><a class="main-nav-link" href="/pages/news.html">News</a></li>
-					<li><a class="main-nav-link" href="/pages/faqs.html">Faqs</a></li>
-					<li>
-						<a class="main-nav-link" href="/pages/contact.html">Contact Us</a>
-					</li>
-					<li>
-						<a class="main-nav-link nav-cta" href="/pages/products.html">
-							Get Started
-						</a>
-					</li>
-				</ul>
-			</nav>
-			<button class="btn-mobile-nav">
-				<ion-icon
-					class="icon-mobile-nav"
-					name="menu-outline"
-					id="menu-mobile"></ion-icon>
-				<ion-icon
-					class="icon-mobile-nav"
-					name="close-outline"
-					id="menu-close"></ion-icon>
-			</button>
-		</header>
-  <body>
-  <main>
-    <div class="contact-hero">
+		<nav class="main-nav">
+			<ul class="main-nav-list">
+				<li><a class="main-nav-link" href="/">Home</a></li>
+				<li>
+					<a class="main-nav-link" href="/pages/about.html">About Us</a>
+				</li>
+				<li>
+					<a class="main-nav-link" href="/pages/products.html">Products</a>
+				</li>
+				<li><a class="main-nav-link" href="/pages/news.html">News</a></li>
+				<li><a class="main-nav-link" href="/pages/faqs.html">Faqs</a></li>
+				<li>
+					<a class="main-nav-link" href="/pages/contact.html">Contact Us</a>
+				</li>
+				<li>
+					<a class="main-nav-link nav-cta" href="/pages/products.html">
+						Get Started
+					</a>
+				</li>
+			</ul>
+		</nav>
+		<button class="btn-mobile-nav">
+			<ion-icon
+				class="icon-mobile-nav"
+				name="menu-outline"
+				id="menu-mobile"></ion-icon>
+			<ion-icon
+				class="icon-mobile-nav"
+				name="close-outline"
+				id="menu-close"></ion-icon>
+		</button>
+	</header>
+	<body>
+		<main>
+			<div class="contact-hero">
 				<div class="contact-container">
 					<div class="contact-hero-content">
 						<h1 class="heading-primary">Frequently Asked Questions</h1>
 					</div>
 				</div>
 			</div>
-  </main>  
-  </body>
- 	<footer>
-			<div class="footer">
-				<div class="footer-container">
-					<div class="logo-section">
-						<div class="logo-section-title">
-							<h1>Burchells Accounting</h1>
-							<p>Address Goes Here</p>
-							<p>876-333-3333</p>
-						</div>
-
-						<div class="social-links">
-							<i class="fa-brands fa-facebook"></i>
-							<i class="fa-brands fa-twitter"></i>
-							<i class="fa-brands fa-linkedin"></i>
-							<i class="fa-brands fa-instagram"></i>
-						</div>
-					</div>
-					<div class="footer-links-section">
-						<div class="footer-links">
-							<div class="footer-links-title">
-								<h3>Company</h3>
-							</div>
-							<ul>
-								<li class="footer-link"><a href="/pages/about.html">About Us</a></li>
-								<li class="footer-link"><a href="/pages/products.html">Products</a></li>
-								<li class="footer-link"><a href="/pages/about.html">Our Team</a></li>
-								<li class="footer-link"><a href="/index.html">Testimonials</a></li>
-								<li class="footer-link"><a href="/pages/faqs.html">FAQs</a></li>
-								<li class="footer-link"><a href="/pages/news.html">News</a></li>
-							</ul>
-						</div>
+			<section class="section-about">
+				<div class="about-us">
+					<div class="about-text-box">
+						<h4 class="sub-title">FAQ</h4>
+						<h1 class="heading-primary black">Most popular questions</h1>
 					</div>
 
-					<div class="footer-links-section">
-						<div class="footer-links">
-							<div class="footer-links-title">
-								<h3>Services</h3>
-							</div>
-							<ul>
-								<li class="footer-link">Financial Analysis</li>
-								<li class="footer-link">Tax Planning</li>
-								<li class="footer-link">Budget Analysis</li>
-								<li class="footer-link">Bookkeeping</li>
-								<li class="footer-link">Virtual Consulting</li>
-								<li class="footer-link">Financial Advisory</li>
-							</ul>
+					<div class="about-content">
+						<p class="about-description">
+							Here, we aim to address your queries and shed light on how our
+							consulting firm can assist you in navigating the intricate world
+							of accounting and finance.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<div class="faq-section">
+				<div class="faqs">
+					<div class="faq-content">
+						<div class="faq-heading">
+							<h1 class="heading-secondary">
+								How can I determine which services are suitable for my business?
+							</h1>
+							<ion-icon
+								class="add-outline"
+								name="add-outline"
+								id="add-outline"></ion-icon>
 						</div>
+
+						<div class="faq-text showAdd">
+							<p>
+								Feel free to contact us for a consultation. Our experienced consultants will assess your business needs and recommend tailored solutions that align with your goals.
+							</p>
+						</div>
+						<hr class="hr">
 					</div>
 
-					<div class="footer-links-section">
-						<div class="footer-links">
-							<div class="footer-links-title">
-								<h3>Support</h3>
-							</div>
-
-							<ul>
-								<li class="footer-link">Help Center</li>
-								<li class="footer-link">Privacy Policy</li>
-								<li class="footer-link">Terms and Conditions</li>
-								<li class="footer-link">Contact Us</li>
-								<li class="footer-link">FAQs</li>
-								<li class="footer-link">News</li>
-							</ul>
+					<div class="faq-content">
+						<div class="faq-heading">
+							<h1 class="heading-secondary">
+								How can your firm help with tax planning and compliance?
+							</h1>
+							<ion-icon
+								class="add-outline"
+								name="add-outline"
+								id="add-outline"></ion-icon>
 						</div>
+
+						<div class="faq-text showAdd">
+							<p>
+								We offer comprehensive tax planning services to minimize liabilities and ensure compliance with applicable tax regulations. Our experts stay updated on the latest tax laws to provide accurate advice tailored to your business. 
+							</p>
+						</div>
+						<hr class="hr">
+					</div>
+
+					<div class="faq-content">
+						<div class="faq-heading">
+							<h1 class="heading-secondary">
+								Do you provide virtual or remote consulting services?
+							</h1>
+							<ion-icon
+								class="add-outline"
+								name="add-outline"
+								id="add-outline"></ion-icon>
+						</div>
+
+						<div class="faq-text showAdd">
+							<p>
+								Yes, we offer virtual consulting services to clients worldwide. Our team utilizes secure and advanced communication platforms to ensure effective collaboration, irrespective of geographic location.
+							</p>
+						</div>
+						<hr class="hr">
 					</div>
 				</div>
 			</div>
-			<div class="copyright">
+		</main>
+	</body>
+	<footer>
+		<div class="footer">
+			<div class="footer-container">
+				<div class="logo-section">
+					<div class="logo-section-title">
+						<h1>Burchells Accounting</h1>
+						<p>Address Goes Here</p>
+						<p>876-333-3333</p>
+					</div>
 
-				<p>Copyright &copy; Burchell Accounting Services 2023</p>
+					<div class="social-links">
+						<i class="fa-brands fa-facebook"></i>
+						<i class="fa-brands fa-twitter"></i>
+						<i class="fa-brands fa-linkedin"></i>
+						<i class="fa-brands fa-instagram"></i>
+					</div>
+				</div>
+				<div class="footer-links-section">
+					<div class="footer-links">
+						<div class="footer-links-title">
+							<h3>Company</h3>
+						</div>
+						<ul>
+							<li class="footer-link">
+								<a href="/pages/about.html">About Us</a>
+							</li>
+							<li class="footer-link">
+								<a href="/pages/products.html">Products</a>
+							</li>
+							<li class="footer-link">
+								<a href="/pages/about.html">Our Team</a>
+							</li>
+							<li class="footer-link">
+								<a href="/index.html">Testimonials</a>
+							</li>
+							<li class="footer-link"><a href="/pages/faqs.html">FAQs</a></li>
+							<li class="footer-link"><a href="/pages/news.html">News</a></li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="footer-links-section">
+					<div class="footer-links">
+						<div class="footer-links-title">
+							<h3>Services</h3>
+						</div>
+						<ul>
+							<li class="footer-link">Financial Analysis</li>
+							<li class="footer-link">Tax Planning</li>
+							<li class="footer-link">Budget Analysis</li>
+							<li class="footer-link">Bookkeeping</li>
+							<li class="footer-link">Virtual Consulting</li>
+							<li class="footer-link">Financial Advisory</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="footer-links-section">
+					<div class="footer-links">
+						<div class="footer-links-title">
+							<h3>Support</h3>
+						</div>
+
+						<ul>
+							<li class="footer-link">Help Center</li>
+							<li class="footer-link">Privacy Policy</li>
+							<li class="footer-link">Terms and Conditions</li>
+							<li class="footer-link">Contact Us</li>
+							<li class="footer-link">FAQs</li>
+							<li class="footer-link">News</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-		</footer>
-    <script src="scripts/main.js">
-			
-		</script>
-  </html>
+		</div>
+		<div class="copyright">
+			<p>Copyright &copy; Burchell Accounting Services 2023</p>
+		</div>
+	</footer>
+	<script src="/scripts/main.js"></script>
+</html>
