--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<body>
 		<header class="header">
 			<a href="/">
-				<img src="" alt="Logo" class="logo" />
+				<img src="/img/logo-1.png" alt="Logo" class="logo" />
 			</a>
 
 			<nav class="main-nav">
