--- a/pages/products.html
+++ b/pages/products.html
@@ -28,8 +28,8 @@
 
 	<header class="header">
 		<a href="/">
-			<img src="" alt="Logo" class="logo" />
-		</a>
+				<img src="/img/logo-1.png" alt="Logo" class="logo" />
+			</a>
 
 		<nav class="main-nav">
 			<ul class="main-nav-list">
