made changes to home page

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <div class="image-box">
                   <img src="img/headshot-3.jpeg" alt="" />
                   <div class="image-title">
-                    <h4>Serena Williams</h4>
+                    <h4>Dave Williams</h4>
                     <p>Manager</p>
                   </div>
                 </div>
@@ -351,8 +351,8 @@
                 <div class="image-box">
                   <img src="img/headshot-6.jpg" alt="" />
                   <div class="image-title">
-                    <h4>Michael Liam</h4>
-                    <p>HR Manager</p>
+                    <h4>Micheal Bay</h4>
+                    <p>Director</p>
                   </div>
                 </div>
                 <hr />
