--- a/pages/about.html
+++ b/pages/about.html
@@ -172,9 +172,7 @@
 										<h4>Michael Liam</h4>
 									</div>
 									<p>
-										"Gravida vulputate aliquet tempor sitequ esed pretium urna
-										aenean haret placer eharetra adipiscing penati ali vulputate
-										aliquet penatibus aliquam."
+										"Burchell Davis, the visionary CEO of Quantum Innovations, is renowned for his dynamic leadership style and strategic vision."
 									</p>
 									<div class="team-social-links">
 										<i class="fa-brands fa-facebook"></i>
@@ -189,12 +187,10 @@
 								</div>
 								<div class="team-member-text">
 									<div class="image-title">
-										<h4>Michael Liam</h4>
+										<h4>Cheif Keff</h4>
 									</div>
 									<p>
-										"Gravida vulputate aliquet tempor sitequ esed pretium urna
-										aenean haret placer eharetra adipiscing penati ali vulputate
-										aliquet penatibus aliquam."
+										"Cheif Keff, the visionary CEO of Quantum Innovations, is renowned for his dynamic leadership style and strategic vision."
 									</p>
 									<div class="team-social-links">
 										<i class="fa-brands fa-facebook"></i>
@@ -212,12 +208,10 @@
 								</div>
 								<div class="team-member-text">
 									<div class="image-title">
-										<h4>Michael Liam</h4>
+										<h4>Harry Toddler</h4>
 									</div>
 									<p>
-										"Gravida vulputate aliquet tempor sitequ esed pretium urna
-										aenean haret placer eharetra adipiscing penati ali vulputate
-										aliquet penatibus aliquam."
+										"Harry Toddler, the visionary CEO of Quantum Innovations, is renowned for his dynamic leadership style and strategic vision."
 									</p>
 									<div class="team-social-links">
 										<i class="fa-brands fa-facebook"></i>
@@ -232,12 +226,10 @@
 								</div>
 								<div class="team-member-text">
 									<div class="image-title">
-										<h4>Michael Liam</h4>
+										<h4>Cindy Potter</h4>
 									</div>
 									<p>
-										"Gravida vulputate aliquet tempor sitequ esed pretium urna
-										aenean haret placer eharetra adipiscing penati ali vulputate
-										aliquet penatibus aliquam."
+										"Cindy Potter, the visionary CEO of Quantum Innovations, is renowned for his dynamic leadership style and strategic vision."
 									</p>
 									<div class="team-social-links">
 										<i class="fa-brands fa-facebook"></i>
