--- a/pages/news.html
+++ b/pages/news.html
@@ -168,9 +168,10 @@
 						<p>Stay up to date with upcoming news and promos.</p>
 					</div>
 					<div class="subscribe-form">
-						<form action="" class="subscribe-form-controls">
+						<p id="response" class="error-message"></p>
+						<form method = "post" id = "subscribe-form" class="subscribe-form-controls">
 							<div>
-								<input type="email" name="email" id="email" placeholder="Enter your email">
+								<input type="email" name="email" id="subscribe-email" placeholder="Enter your email">
 							</div>
 							<div>
 								<button class="subscribe-btn" type="submit">
