--- a/pages/contact.html
+++ b/pages/contact.html
@@ -113,6 +113,7 @@
 
 					<div class="contant-form-box">
 						<div class="form-box">
+							<p id ="message" class="error-message"></p>
 							<form method="post" id="form">
 								<div class="form-controls">
 									<label for="">Full Name</label>
@@ -121,7 +122,7 @@
 										name="fullname"
 										id="fullname"
 										placeholder="Your Name"
-										required />
+										/>
 								</div>
 
 								<div class="form-controls">
@@ -131,7 +132,7 @@
 										name="email"
 										id="email"
 										placeholder="example@gmail.com"
-										required />
+										/>
 								</div>
 
 								<div class="form-controls">
@@ -141,7 +142,7 @@
 										name="phonenumber"
 										id="phonenumber"
 										placeholder="ex. +1876-555-2222"
-										required />
+										/>
 								</div>
 
 								<div class="form-controls">
@@ -152,16 +153,19 @@
 											Financial Analysis
 										</option>
 										<option value="Financial Analysis">
-											Financial Analysis
+											Tax Planning
 										</option>
 										<option value="Financial Analysis">
-											Financial Analysis
+											Budget Analysis
 										</option>
 										<option value="Financial Analysis">
-											Financial Analysis
+											BookKeeping
 										</option>
 										<option value="Financial Analysis">
-											Financial Analysis
+											Virtual Consultancy
+										</option>
+										<option value="Financial Analysis">
+											Financial Advisory
 										</option>
 									</select>
 								</div>
@@ -173,7 +177,7 @@
 										id="message"
 										cols="30"
 										rows="10"
-										required></textarea>
+										></textarea>
 								</div>
 
 								<button class="services-btn contact-btn" type="submit">
