--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>Copyright &copy; Burchell Accounting Services 2023</p>
+        <p>Copyright &copy; Burchell Accounting Services 2023 &mdash; Developed By: Burchell Davis</p>
       </div>
     </footer>
     <script src="scripts/main.js"></script>
