--- a/pages/news.html
+++ b/pages/news.html
@@ -261,9 +261,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="copyright">
-			<p>Copyright &copy; Burchell Accounting Services 2023</p>
-		</div>
+		  <div class="copyright">
+        <p>Copyright &copy; Burchell Accounting Services 2023 &mdash; Developed By: Burchell Davis</p>
+      </div>
 	</footer>
 	<script src="/scripts/main.js"></script>
 </html>
