--- a/pages/products.html
+++ b/pages/products.html
@@ -17,7 +17,7 @@
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
-      <script
+		<script
 			type="module"
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 		<script
@@ -28,8 +28,8 @@
 
 	<header class="header">
 		<a href="/">
-				<img src="/img/logo-1.png" alt="Logo" class="logo" />
-			</a>
+			<img src="/img/logo-1.png" alt="Logo" class="logo" />
+		</a>
 
 		<nav class="main-nav">
 			<ul class="main-nav-list">
@@ -221,7 +221,10 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<p>Copyright &copy; Burchell Accounting Services 2023</p>
+			<p>
+				Copyright &copy; Burchell Accounting Services 2023 &mdash; Developed By:
+				Burchell Davis
+			</p>
 		</div>
 	</footer>
 	<script src="/scripts/main.js"></script>
